bpo-38359: Ensures pyw.exe launcher reads correct registry key (GH-16561)